<resources>
    <string name="app_name">NotificationAndAlarm</string>
    <string name="alarm_description">Alarm Description</string>
    <string name="alarm_title">AlarmTitle</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="charge_mode_alarm">Charge Mode Alarm</string>
    <string name="battery_low_alarm">Battery Low Alarm</string>
    <string name="network_state_change">Network State Change Alarm</string>
    <string name="gps_alarm">Gps Alarm</string>
    <string name="device_idle_alarm">Device Idle Alarm</string>
    <string name="predefined_time">Predefined Time Alarm</string>
    <string name="after_certain_amount_time">After Some  Time Alarm set</string>
    <string name="charge_mode_alarm_long_description">It will giving Battery Charging Notification When Charging Mode On .And If We Change Charging Mode then Not Charging Notification Give </string>
    <string name="battery_low_long_description">It will Giving Notification When Your Device Battery is Less than 15% </string>
    <string name="network_change_long_description">It will notify Your Device Connected   Network State Change like Your Device First Connected to Mobile data then it change to wifi it will give Notification </string>
    <string name="gps_state_change_alarm_long_description">It will Notify when Gps Enable And Disable</string>
    <string name="device_idle_alarm_long_description"> It Notify for When you not interact the Your Device in idle State And Give notification</string>
    <string name="predefined_time_alarm_long_description">It will Set Alarm for   Predefined Time in our Case it is 30 Second</string>
    <string name="set_alarm_after_some_time_long_description">It will Set  Alarm After Some Time for user entered Time</string>
    <string name="charge_mode_alarm_short_description">It will Notify when Charging Mode change</string>
    <string name="battery_low_short_description">It will Set Alarm for Low Battery Alert</string>
    <string name="network_change_short_description">It will notify Whenever Network State Change</string>
    <string name="gps_state_change_alarm_short_description">It will Notify  Gps State Change</string>
    <string name="device_idle_alarm_short_description"> It Notify for When Device is idle</string>
    <string name="predefined_time_alarm_short_description">It will Set Alarm for  Predefined Time</string>
    <string name="set_alarm_after_some_time_short_description">It will Set Alarm for After Certain Time</string>
    <string name="battery_charging">Battery Charging</string>
    <string name="battery_not_charging">Battery Not Charging</string>
    <string name="battery_low">Oops!! Battery Low.Connect to Charger</string>
    <string name="network_state_wifi">Network State Connected to Wifi</string>
    <string name="network_state_mobile">Network State Connected to Mobile Data</string>
    <string name="network_state_bluetooth">Network State Connected to Bluetooth</string>
    <string name="network_state_not_connected">Not Connect to Network</string>
    <string name="gps_enable">Gps Enable</string>
    <string name="gps_disable">Gps Disable</string>
    <string name="predefined_time_alarm">Predefined Alarm set</string>
    <string name="after_some_alarm_set">After Some time Alarm Set</string>
    <string name="device_idle">Device is in Idle State</string>
    <string name="device_not_idle">Device is in Not Idle State</string>
    <string name="enter_time_for_repeating">Enter Time For Repeating in Second</string>
    <string name="alarm_long_description">Alarm Long Description</string>
</resources>